// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<timeline> demo: render [basic] correctly 1`] = `
"<div style=\\"margin-bottom: 40px;\\"><span class=\\"arco-typography\\" style=\\"vertical-align: middle; margin-right: 8px;\\"> Reverse <!----><!--v-if--><!--v-if--><!--v-if--></span><span class=\\"arco-radio-group arco-radio-group-size-undefined arco-radio-group-direction-horizontal\\"><label class=\\"arco-radio arco-radio-checked\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"false\\"><span class=\\"arco-icon-hover arco-icon-hover-disabled arco-radio-icon-hover\\"><span class=\\"arco-radio-icon\\"></span></span><span class=\\"arco-radio-label\\">No Reverse</span></label><label class=\\"arco-radio\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"true\\"><span class=\\"arco-icon-hover arco-radio-icon-hover\\"><span class=\\"arco-radio-icon\\"></span></span><span class=\\"arco-radio-label\\">Reverse</span></label></span></div>
<div role=\\"list\\" class=\\"arco-timeline arco-timeline-left arco-timeline-direction-vertical\\">
  <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
    <div class=\\"arco-timeline-item-dot-wrapper\\">
      <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"arco-timeline-item-dot-content\\">
        <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
      </div>
    </div>
    <div class=\\"arco-timeline-item-content-wrapper\\">
      <div class=\\"arco-timeline-item-content\\">The first milestone</div>
      <div class=\\"arco-timeline-item-label\\">2017-03-10</div>
    </div>
    <!--v-if-->
  </div>
  <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
    <div class=\\"arco-timeline-item-dot-wrapper\\">
      <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"arco-timeline-item-dot-content\\">
        <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
      </div>
    </div>
    <div class=\\"arco-timeline-item-content-wrapper\\">
      <div class=\\"arco-timeline-item-content\\">The second milestone</div>
      <div class=\\"arco-timeline-item-label\\">2018-05-12</div>
    </div>
    <!--v-if-->
  </div>
  <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
    <div class=\\"arco-timeline-item-dot-wrapper\\">
      <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"arco-timeline-item-dot-content\\">
        <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
      </div>
    </div>
    <div class=\\"arco-timeline-item-content-wrapper\\">
      <div class=\\"arco-timeline-item-content\\">The third milestone</div>
      <div class=\\"arco-timeline-item-label\\">2020-09-30</div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`<timeline> demo: render [direction] correctly 1`] = `
"<div>
  <div class=\\"arco-row arco-row-align-center arco-row-justify-start\\" style=\\"margin-bottom: 24px;\\"><span class=\\"arco-typography\\">mode: &nbsp; &nbsp;<!----><!--v-if--><!--v-if--><!--v-if--></span><span class=\\"arco-radio-group arco-radio-group-size-undefined arco-radio-group-direction-horizontal\\"><label class=\\"arco-radio arco-radio-checked\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"top\\"><span class=\\"arco-icon-hover arco-icon-hover-disabled arco-radio-icon-hover\\"><span class=\\"arco-radio-icon\\"></span></span><span class=\\"arco-radio-label\\">top</span></label><label class=\\"arco-radio\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"bottom\\"><span class=\\"arco-icon-hover arco-radio-icon-hover\\"><span class=\\"arco-radio-icon\\"></span></span><span class=\\"arco-radio-label\\">bottom</span></label><label class=\\"arco-radio\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"alternate\\"><span class=\\"arco-icon-hover arco-radio-icon-hover\\"><span class=\\"arco-radio-icon\\"></span></span><span class=\\"arco-radio-label\\">alternate</span></label></span></div>
  <div role=\\"list\\" class=\\"arco-timeline arco-timeline-top arco-timeline-direction-horizontal\\">
    <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-horizontal-top arco-timeline-item-label-same arco-timeline-item-last\\">
      <div class=\\"arco-timeline-item-dot-wrapper\\">
        <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-horizontal\\" style=\\"border-top-style: solid;\\"></div>
        <div class=\\"arco-timeline-item-dot-content\\">
          <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"arco-timeline-item-content-wrapper\\">
        <div class=\\"arco-timeline-item-content\\">
          <div class=\\"arco-row arco-row-align-start arco-row-justify-start\\" style=\\"display: inline-flex; align-items: center;\\"><img width=\\"40\\" style=\\"margin-right: 16px; margin-bottom: 12px;\\" src=\\"https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/b5d834b83708a269b4562924436eac48.png~tplv-uwbnlip3yd-png.png\\">
            <div style=\\"margin-bottom: 12px;\\"> Toutiao <div style=\\"font-size: 12px; color: rgb(78, 89, 105);\\"> Founded in 2012 </div>
            </div>
          </div>
        </div>
        <div class=\\"arco-timeline-item-label\\">2012-08</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-horizontal-top arco-timeline-item-label-same arco-timeline-item-last\\">
      <div class=\\"arco-timeline-item-dot-wrapper\\">
        <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-horizontal\\" style=\\"border-top-style: solid;\\"></div>
        <div class=\\"arco-timeline-item-dot-content\\">
          <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"arco-timeline-item-content-wrapper\\">
        <div class=\\"arco-timeline-item-content\\">
          <div class=\\"arco-row arco-row-align-start arco-row-justify-start\\" style=\\"display: inline-flex; align-items: center;\\"><img width=\\"40\\" style=\\"margin-right: 16px; margin-bottom: 12px;\\" src=\\"https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/385ed540c359ec8a9b9ce2b5fe89b098.png~tplv-uwbnlip3yd-png.png\\">
            <div style=\\"margin-bottom: 12px;\\"> Xigua Video <div style=\\"font-size: 12px; color: rgb(78, 89, 105);\\"> Founded in 2017 </div>
            </div>
          </div>
        </div>
        <div class=\\"arco-timeline-item-label\\">2017-05</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-horizontal-top arco-timeline-item-label-same arco-timeline-item-last\\">
      <div class=\\"arco-timeline-item-dot-wrapper\\">
        <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-horizontal\\" style=\\"border-top-style: solid;\\"></div>
        <div class=\\"arco-timeline-item-dot-content\\">
          <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"arco-timeline-item-content-wrapper\\">
        <div class=\\"arco-timeline-item-content\\">
          <div class=\\"arco-row arco-row-align-start arco-row-justify-start\\" style=\\"display: inline-flex; align-items: center;\\"><img width=\\"40\\" style=\\"margin-right: 16px; margin-bottom: 12px;\\" src=\\"https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/385ed540c359ec8a9b9ce2b5fe89b098.png~tplv-uwbnlip3yd-png.png\\">
            <div style=\\"margin-bottom: 12px;\\"> Pipidance <div style=\\"font-size: 12px; color: rgb(78, 89, 105);\\"> Founded in 2018 </div>
            </div>
          </div>
        </div>
        <div class=\\"arco-timeline-item-label\\">2018-07</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-horizontal-top arco-timeline-item-label-same arco-timeline-item-last\\">
      <div class=\\"arco-timeline-item-dot-wrapper\\">
        <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-horizontal\\" style=\\"border-top-style: dashed;\\"></div>
        <div class=\\"arco-timeline-item-dot-content\\">
          <div class=\\"arco-timeline-item-dot-custom\\">
            <div class=\\"arco-spin\\">
              <div class=\\"arco-spin-icon\\" style=\\"font-size: 12px;\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-loading arco-icon-spin\\" style=\\"font-size: 12px;\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
                  <path d=\\"M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6\\"></path>
                </svg></div>
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div class=\\"arco-timeline-item-content-wrapper\\">
        <div class=\\"arco-timeline-item-content\\"></div>
        <div class=\\"arco-timeline-item-label\\"></div>
      </div>
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`<timeline> demo: render [dot] correctly 1`] = `
"<div style=\\"display: flex;\\">
  <div role=\\"list\\" class=\\"arco-timeline arco-timeline-left arco-timeline-direction-vertical\\" style=\\"margin-right: 40px;\\">
    <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
      <div class=\\"arco-timeline-item-dot-wrapper\\">
        <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"arco-timeline-item-dot-content\\">
          <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\" style=\\"background-color: rgb(0, 180, 42);\\"></div>
        </div>
      </div>
      <div class=\\"arco-timeline-item-content-wrapper\\">
        <div class=\\"arco-timeline-item-content\\"> The first milestone </div>
        <div class=\\"arco-timeline-item-label\\">2020-04-12</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
      <div class=\\"arco-timeline-item-dot-wrapper\\">
        <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"arco-timeline-item-dot-content\\">
          <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"arco-timeline-item-content-wrapper\\">
        <div class=\\"arco-timeline-item-content\\"> The second milestone </div>
        <div class=\\"arco-timeline-item-label\\">2020-05-17</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
      <div class=\\"arco-timeline-item-dot-wrapper\\">
        <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"arco-timeline-item-dot-content\\">
          <div class=\\"arco-timeline-item-dot-custom\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-clock-circle\\" style=\\"font-size: 12px; color: rgb(245, 63, 63);\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
              <path d=\\"M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z\\"></path>
            </svg></div>
        </div>
      </div>
      <div class=\\"arco-timeline-item-content-wrapper\\">
        <div class=\\"arco-timeline-item-content\\"> The third milestone </div>
        <div class=\\"arco-timeline-item-label\\">2020-06-22</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
      <div class=\\"arco-timeline-item-dot-wrapper\\">
        <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"arco-timeline-item-dot-content\\">
          <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"arco-timeline-item-content-wrapper\\">
        <div class=\\"arco-timeline-item-content\\"> The third milestone </div>
        <div class=\\"arco-timeline-item-label\\">2020-06-22</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <div role=\\"list\\" class=\\"arco-timeline arco-timeline-left arco-timeline-direction-vertical\\" style=\\"margin-right: 40px;\\">
    <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
      <div class=\\"arco-timeline-item-dot-wrapper\\">
        <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"arco-timeline-item-dot-content\\">
          <div class=\\"arco-timeline-item-dot-custom\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-check\\" style=\\"font-size: 12px; padding: 2px; box-sizing: border-box; border-radius: 50%;\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
              <path d=\\"M41.678 11.05 19.05 33.678 6.322 20.95\\"></path>
            </svg></div>
        </div>
      </div>
      <div class=\\"arco-timeline-item-content-wrapper\\">
        <div class=\\"arco-timeline-item-content\\"> The first milestone </div>
        <div class=\\"arco-timeline-item-label\\">2020-04-12</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
      <div class=\\"arco-timeline-item-dot-wrapper\\">
        <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"arco-timeline-item-dot-content\\">
          <div class=\\"arco-timeline-item-dot-custom\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-check\\" style=\\"font-size: 12px; padding: 2px; box-sizing: border-box; border-radius: 50%;\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
              <path d=\\"M41.678 11.05 19.05 33.678 6.322 20.95\\"></path>
            </svg></div>
        </div>
      </div>
      <div class=\\"arco-timeline-item-content-wrapper\\">
        <!--v-if-->
        <div class=\\"arco-timeline-item-label\\">2020-05-17</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
      <div class=\\"arco-timeline-item-dot-wrapper\\">
        <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"arco-timeline-item-dot-content\\">
          <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"arco-timeline-item-content-wrapper\\">
        <div class=\\"arco-timeline-item-content\\">The third milestone</div>
        <div class=\\"arco-timeline-item-label\\">2020-06-22</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
      <div class=\\"arco-timeline-item-dot-wrapper\\">
        <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"arco-timeline-item-dot-content\\">
          <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"arco-timeline-item-content-wrapper\\">
        <div class=\\"arco-timeline-item-content\\"> The third milestone </div>
        <div class=\\"arco-timeline-item-label\\">2020-06-22</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <div role=\\"list\\" class=\\"arco-timeline arco-timeline-left arco-timeline-direction-vertical\\">
    <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
      <div class=\\"arco-timeline-item-dot-wrapper\\">
        <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"arco-timeline-item-dot-content\\">
          <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"arco-timeline-item-content-wrapper\\">
        <div class=\\"arco-timeline-item-content\\">The first milestone</div>
        <div class=\\"arco-timeline-item-label\\">2020-04-12</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
      <div class=\\"arco-timeline-item-dot-wrapper\\">
        <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"arco-timeline-item-dot-content\\">
          <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"arco-timeline-item-content-wrapper\\">
        <div class=\\"arco-timeline-item-content\\"> The second milestone </div>
        <div class=\\"arco-timeline-item-label\\">2020-05-17</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
      <div class=\\"arco-timeline-item-dot-wrapper\\">
        <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"arco-timeline-item-dot-content\\">
          <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"arco-timeline-item-content-wrapper\\">
        <div class=\\"arco-timeline-item-content\\"> The third milestone </div>
        <div class=\\"arco-timeline-item-label\\">2020-06-22</div>
      </div>
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`<timeline> demo: render [icon] correctly 1`] = `
"<div role=\\"list\\" class=\\"arco-timeline arco-timeline-left arco-timeline-direction-vertical\\">
  <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
    <div class=\\"arco-timeline-item-dot-wrapper\\">
      <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"arco-timeline-item-dot-content\\">
        <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\" style=\\"background-color: rgb(0, 180, 42);\\"></div>
      </div>
    </div>
    <div class=\\"arco-timeline-item-content-wrapper\\">
      <div class=\\"arco-timeline-item-content\\"> The first milestone </div>
      <div class=\\"arco-timeline-item-label\\">2017-03-10</div>
    </div>
    <!--v-if-->
  </div>
  <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
    <div class=\\"arco-timeline-item-dot-wrapper\\">
      <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"arco-timeline-item-dot-content\\">
        <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
      </div>
    </div>
    <div class=\\"arco-timeline-item-content-wrapper\\">
      <div class=\\"arco-timeline-item-content\\">The second milestone</div>
      <div class=\\"arco-timeline-item-label\\">2018-05-22</div>
    </div>
    <!--v-if-->
  </div>
  <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
    <div class=\\"arco-timeline-item-dot-wrapper\\">
      <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"arco-timeline-item-dot-content\\">
        <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\" style=\\"background-color: rgb(245, 63, 63);\\"></div>
      </div>
    </div>
    <div class=\\"arco-timeline-item-content-wrapper\\">
      <div class=\\"arco-timeline-item-content\\"> The third milestone <svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-exclamation-circle-fill\\" style=\\"font-size: 12px; margin-left: 4px;\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
          <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20Zm-2-11a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2Zm4-18a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1V15Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
        </svg></div>
      <div class=\\"arco-timeline-item-label\\">2020-06-22</div>
    </div>
    <!--v-if-->
  </div>
  <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
    <div class=\\"arco-timeline-item-dot-wrapper\\">
      <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"arco-timeline-item-dot-content\\">
        <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\" style=\\"background-color: rgb(201, 205, 212);\\"></div>
      </div>
    </div>
    <div class=\\"arco-timeline-item-content-wrapper\\">
      <div class=\\"arco-timeline-item-content\\"> The fourth milestone </div>
      <div class=\\"arco-timeline-item-label\\">2020-09-30</div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`<timeline> demo: render [label] correctly 1`] = `
"<div>
  <div class=\\"arco-row arco-row-align-center arco-row-justify-start\\"><span class=\\"arco-typography\\">labelPosition: &nbsp; &nbsp;<!----><!--v-if--><!--v-if--><!--v-if--></span><span class=\\"arco-radio-group arco-radio-group-size-undefined arco-radio-group-direction-horizontal\\"><label class=\\"arco-radio arco-radio-checked\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"same\\"><span class=\\"arco-icon-hover arco-icon-hover-disabled arco-radio-icon-hover\\"><span class=\\"arco-radio-icon\\"></span></span><span class=\\"arco-radio-label\\">same</span></label><label class=\\"arco-radio\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"relative\\"><span class=\\"arco-icon-hover arco-radio-icon-hover\\"><span class=\\"arco-radio-icon\\"></span></span><span class=\\"arco-radio-label\\">relative</span></label></span></div>
  <div class=\\"arco-row arco-row-align-center arco-row-justify-start\\" style=\\"margin: 20px 0px 24px;\\"><span class=\\"arco-typography\\">mode: &nbsp; &nbsp;<!----><!--v-if--><!--v-if--><!--v-if--></span><span class=\\"arco-radio-group arco-radio-group-size-undefined arco-radio-group-direction-horizontal\\"><label class=\\"arco-radio arco-radio-checked\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"left\\"><span class=\\"arco-icon-hover arco-icon-hover-disabled arco-radio-icon-hover\\"><span class=\\"arco-radio-icon\\"></span></span><span class=\\"arco-radio-label\\">left</span></label><label class=\\"arco-radio\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"right\\"><span class=\\"arco-icon-hover arco-radio-icon-hover\\"><span class=\\"arco-radio-icon\\"></span></span><span class=\\"arco-radio-label\\">right</span></label><label class=\\"arco-radio\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"alternate\\"><span class=\\"arco-icon-hover arco-radio-icon-hover\\"><span class=\\"arco-radio-icon\\"></span></span><span class=\\"arco-radio-label\\">alternate</span></label></span></div>
  <div role=\\"list\\" class=\\"arco-timeline arco-timeline-left arco-timeline-direction-vertical\\">
    <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
      <div class=\\"arco-timeline-item-dot-wrapper\\">
        <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"arco-timeline-item-dot-content\\">
          <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\" style=\\"background-color: rgb(82, 196, 25);\\"></div>
        </div>
      </div>
      <div class=\\"arco-timeline-item-content-wrapper\\">
        <div class=\\"arco-timeline-item-content\\"> The first milestone </div>
        <div class=\\"arco-timeline-item-label\\">2017-03-10</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\" labelposition=\\"same\\">
      <div class=\\"arco-timeline-item-dot-wrapper\\">
        <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"arco-timeline-item-dot-content\\">
          <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\" style=\\"background-color: rgb(245, 34, 45);\\"></div>
        </div>
      </div>
      <div class=\\"arco-timeline-item-content-wrapper\\">
        <div class=\\"arco-timeline-item-content\\"> The second milestone </div>
        <div class=\\"arco-timeline-item-label\\">2018-05-12</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
      <div class=\\"arco-timeline-item-dot-wrapper\\">
        <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"arco-timeline-item-dot-content\\">
          <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"arco-timeline-item-content-wrapper\\">
        <div class=\\"arco-timeline-item-content\\"> The third milestone </div>
        <div class=\\"arco-timeline-item-label\\">2020-09-30</div>
      </div>
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`<timeline> demo: render [mode] correctly 1`] = `
"<div class=\\"arco-row arco-row-align-start arco-row-justify-space-between\\">
  <div role=\\"list\\" class=\\"arco-timeline arco-timeline-alternate arco-timeline-direction-vertical\\" style=\\"flex: 1;\\">
    <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
      <div class=\\"arco-timeline-item-dot-wrapper\\">
        <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"arco-timeline-item-dot-content\\">
          <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"arco-timeline-item-content-wrapper\\">
        <div class=\\"arco-timeline-item-content\\">The first milestone</div>
        <div class=\\"arco-timeline-item-label\\">2017-03-10</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
      <div class=\\"arco-timeline-item-dot-wrapper\\">
        <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"arco-timeline-item-dot-content\\">
          <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"arco-timeline-item-content-wrapper\\">
        <div class=\\"arco-timeline-item-content\\">The second milestone</div>
        <div class=\\"arco-timeline-item-label\\">2018-05-12</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
      <div class=\\"arco-timeline-item-dot-wrapper\\">
        <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"arco-timeline-item-dot-content\\">
          <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"arco-timeline-item-content-wrapper\\">
        <div class=\\"arco-timeline-item-content\\"> The third milestone </div>
        <div class=\\"arco-timeline-item-label\\">2020-09-30</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <div role=\\"list\\" class=\\"arco-timeline arco-timeline-right arco-timeline-direction-vertical\\" style=\\"flex: 1;\\">
    <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-right arco-timeline-item-label-same arco-timeline-item-last\\">
      <div class=\\"arco-timeline-item-dot-wrapper\\">
        <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"arco-timeline-item-dot-content\\">
          <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"arco-timeline-item-content-wrapper\\">
        <div class=\\"arco-timeline-item-content\\">The first milestone</div>
        <div class=\\"arco-timeline-item-label\\">2017-03-10</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-right arco-timeline-item-label-same arco-timeline-item-last\\">
      <div class=\\"arco-timeline-item-dot-wrapper\\">
        <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"arco-timeline-item-dot-content\\">
          <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"arco-timeline-item-content-wrapper\\">
        <div class=\\"arco-timeline-item-content\\">The second milestone</div>
        <div class=\\"arco-timeline-item-label\\">2018-05-12</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-right arco-timeline-item-label-same arco-timeline-item-last\\">
      <div class=\\"arco-timeline-item-dot-wrapper\\">
        <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"arco-timeline-item-dot-content\\">
          <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"arco-timeline-item-content-wrapper\\">
        <div class=\\"arco-timeline-item-content\\"> The third milestone </div>
        <div class=\\"arco-timeline-item-label\\">2020-09-30</div>
      </div>
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`<timeline> demo: render [pending] correctly 1`] = `
"<div class=\\"arco-row arco-row-align-center arco-row-justify-start\\" style=\\"margin-bottom: 24px;\\"><label class=\\"arco-checkbox\\" checked=\\"false\\"><input type=\\"checkbox\\" class=\\"arco-checkbox-target\\" value=\\"false\\"><span class=\\"arco-icon-hover arco-checkbox-icon-hover\\"><div class=\\"arco-checkbox-icon\\"><!----></div></span><span class=\\"arco-checkbox-label\\"> horizontal &nbsp; &nbsp; </span></label><label class=\\"arco-checkbox\\" checked=\\"false\\"><input type=\\"checkbox\\" class=\\"arco-checkbox-target\\" value=\\"false\\"><span class=\\"arco-icon-hover arco-checkbox-icon-hover\\"><div class=\\"arco-checkbox-icon\\"><!----></div></span><span class=\\"arco-checkbox-label\\"> reverse &nbsp; &nbsp; </span></label><label class=\\"arco-checkbox\\" checked=\\"false\\"><input type=\\"checkbox\\" class=\\"arco-checkbox-target\\" value=\\"false\\"><span class=\\"arco-icon-hover arco-checkbox-icon-hover\\"><div class=\\"arco-checkbox-icon\\"><!----></div></span><span class=\\"arco-checkbox-label\\"> pending &nbsp; &nbsp; </span></label><label class=\\"arco-checkbox\\" checked=\\"false\\"><input type=\\"checkbox\\" class=\\"arco-checkbox-target\\" value=\\"false\\"><span class=\\"arco-icon-hover arco-checkbox-icon-hover\\"><div class=\\"arco-checkbox-icon\\"><!----></div></span><span class=\\"arco-checkbox-label\\"> custom pendingDot </span></label></div>
<div role=\\"list\\" class=\\"arco-timeline arco-timeline-left arco-timeline-direction-vertical\\">
  <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
    <div class=\\"arco-timeline-item-dot-wrapper\\">
      <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"arco-timeline-item-dot-content\\">
        <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\" style=\\"background-color: rgb(82, 196, 25);\\"></div>
      </div>
    </div>
    <div class=\\"arco-timeline-item-content-wrapper\\">
      <div class=\\"arco-timeline-item-content\\"> The first milestone </div>
      <div class=\\"arco-timeline-item-label\\">2017-03-10</div>
    </div>
    <!--v-if-->
  </div>
  <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
    <div class=\\"arco-timeline-item-dot-wrapper\\">
      <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"arco-timeline-item-dot-content\\">
        <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\" style=\\"background-color: rgb(245, 34, 45);\\"></div>
      </div>
    </div>
    <div class=\\"arco-timeline-item-content-wrapper\\">
      <div class=\\"arco-timeline-item-content\\"> The second milestone </div>
      <div class=\\"arco-timeline-item-label\\">2018-05-12</div>
    </div>
    <!--v-if-->
  </div>
  <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
    <div class=\\"arco-timeline-item-dot-wrapper\\">
      <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"arco-timeline-item-dot-content\\">
        <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
      </div>
    </div>
    <div class=\\"arco-timeline-item-content-wrapper\\">
      <div class=\\"arco-timeline-item-content\\">The third milestone</div>
      <div class=\\"arco-timeline-item-label\\">2020-09-30</div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`<timeline> demo: render [type] correctly 1`] = `
"<div role=\\"list\\" class=\\"arco-timeline arco-timeline-left arco-timeline-direction-vertical\\">
  <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
    <div class=\\"arco-timeline-item-dot-wrapper\\">
      <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: dashed;\\"></div>
      <div class=\\"arco-timeline-item-dot-content\\">
        <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
      </div>
    </div>
    <div class=\\"arco-timeline-item-content-wrapper\\">
      <div class=\\"arco-timeline-item-content\\"> The first milestone <br><span class=\\"arco-typography arco-typography-secondary\\" style=\\"font-size: 12px; margin-top: 4px;\\"> This is a descriptive message <!----><!--v-if--><!--v-if--><!--v-if--></span></div>
      <div class=\\"arco-timeline-item-label\\">2017-03-10</div>
    </div>
    <!--v-if-->
  </div>
  <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
    <div class=\\"arco-timeline-item-dot-wrapper\\">
      <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: dashed;\\"></div>
      <div class=\\"arco-timeline-item-dot-content\\">
        <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
      </div>
    </div>
    <div class=\\"arco-timeline-item-content-wrapper\\">
      <div class=\\"arco-timeline-item-content\\"> The second milestone <br><span class=\\"arco-typography arco-typography-secondary\\" style=\\"font-size: 12px; margin-top: 4px;\\"> This is a descriptive message <!----><!--v-if--><!--v-if--><!--v-if--></span></div>
      <div class=\\"arco-timeline-item-label\\">2018-05-12</div>
    </div>
    <!--v-if-->
  </div>
  <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-same arco-timeline-item-last\\">
    <div class=\\"arco-timeline-item-dot-wrapper\\">
      <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: dashed;\\"></div>
      <div class=\\"arco-timeline-item-dot-content\\">
        <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
      </div>
    </div>
    <div class=\\"arco-timeline-item-content-wrapper\\">
      <div class=\\"arco-timeline-item-content\\"> The third milestone <br><span class=\\"arco-typography arco-typography-secondary\\" style=\\"font-size: 12px; margin-top: 4px;\\"> This is a descriptive message <!----><!--v-if--><!--v-if--><!--v-if--></span></div>
      <div class=\\"arco-timeline-item-label\\">2020-09-30</div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`<timeline> demo: render [vertical] correctly 1`] = `
"<div>
  <div class=\\"arco-row arco-row-align-center arco-row-justify-start\\" style=\\"margin-bottom: 24px;\\"><span class=\\"arco-typography\\">mode: &nbsp; &nbsp;<!----><!--v-if--><!--v-if--><!--v-if--></span><span class=\\"arco-radio-group arco-radio-group-size-undefined arco-radio-group-direction-horizontal\\"><label class=\\"arco-radio arco-radio-checked\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"left\\"><span class=\\"arco-icon-hover arco-icon-hover-disabled arco-radio-icon-hover\\"><span class=\\"arco-radio-icon\\"></span></span><span class=\\"arco-radio-label\\">left</span></label><label class=\\"arco-radio\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"right\\"><span class=\\"arco-icon-hover arco-radio-icon-hover\\"><span class=\\"arco-radio-icon\\"></span></span><span class=\\"arco-radio-label\\">right</span></label><label class=\\"arco-radio\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"alternate\\"><span class=\\"arco-icon-hover arco-radio-icon-hover\\"><span class=\\"arco-radio-icon\\"></span></span><span class=\\"arco-radio-label\\">alternate</span></label></span></div>
  <div role=\\"list\\" class=\\"arco-timeline arco-timeline-left arco-timeline-direction-vertical\\">
    <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-relative arco-timeline-item-last\\">
      <div class=\\"arco-timeline-item-dot-wrapper\\">
        <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"arco-timeline-item-dot-content\\">
          <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"arco-timeline-item-content-wrapper\\">
        <div class=\\"arco-timeline-item-content\\">
          <div class=\\"arco-row arco-row-align-start arco-row-justify-start\\" style=\\"display: inline-flex; align-items: center;\\"><img width=\\"40\\" style=\\"margin-right: 16px; margin-bottom: 12px;\\" src=\\"https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/b5d834b83708a269b4562924436eac48.png~tplv-uwbnlip3yd-png.png\\">
            <div style=\\"margin-bottom: 12px;\\"> Toutiao <div style=\\"font-size: 12px; color: rgb(78, 89, 105);\\"> Founded in 2012 </div>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
      <div class=\\"arco-timeline-item-label\\">2012-08</div>
    </div>
    <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-relative arco-timeline-item-last\\">
      <div class=\\"arco-timeline-item-dot-wrapper\\">
        <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"arco-timeline-item-dot-content\\">
          <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"arco-timeline-item-content-wrapper\\">
        <div class=\\"arco-timeline-item-content\\">
          <div class=\\"arco-row arco-row-align-start arco-row-justify-start\\" style=\\"display: inline-flex; align-items: center;\\"><img width=\\"40\\" style=\\"margin-right: 16px; margin-bottom: 12px;\\" src=\\"https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/385ed540c359ec8a9b9ce2b5fe89b098.png~tplv-uwbnlip3yd-png.png\\">
            <div style=\\"margin-bottom: 12px;\\"> Xigua Video <div style=\\"font-size: 12px; color: rgb(78, 89, 105);\\"> Founded in 2017 </div>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
      <div class=\\"arco-timeline-item-label\\">2017-05</div>
    </div>
    <div role=\\"listitem\\" class=\\"arco-timeline-item arco-timeline-item-vertical-left arco-timeline-item-label-relative arco-timeline-item-last\\">
      <div class=\\"arco-timeline-item-dot-wrapper\\">
        <div class=\\"arco-timeline-item-dot-line arco-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"arco-timeline-item-dot-content\\">
          <div class=\\"arco-timeline-item-dot arco-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"arco-timeline-item-content-wrapper\\">
        <div class=\\"arco-timeline-item-content\\">
          <div class=\\"arco-row arco-row-align-start arco-row-justify-start\\" style=\\"display: inline-flex; align-items: center;\\"><img width=\\"40\\" style=\\"margin-right: 16px; margin-bottom: 12px;\\" src=\\"https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/385ed540c359ec8a9b9ce2b5fe89b098.png~tplv-uwbnlip3yd-png.png\\">
            <div style=\\"margin-bottom: 12px;\\"> Pipidance <div style=\\"font-size: 12px; color: rgb(78, 89, 105);\\"> Founded in 2018 </div>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
      <div class=\\"arco-timeline-item-label\\">2018-07</div>
    </div>
  </div>
</div>"
`;
